--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,13 +13,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build Docker image
-        run: docker build -t vacunto/cd_docker_project:latest .
+        run: docker build -t vacunto/cd_docker_project:v1 .
 
       - name: Log in to Docker Hub
         run: echo '${{ secrets.DOCKER_PASSWORD }}' | docker login -u '${{ secrets.DOCKER_USERNAME }}' --password-stdin
 
       - name: Push Docker image to Docker Hub
-        run: docker push vacunto/cd_docker_project:latest
+        run: docker push vacunto/cd_docker_project:v1
 
   deploy:
     needs: build
