--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   web:
-    image: phoenixwh/cd_docker_project:latest
+    image: vacunto/cd_docker_project:v1
 
     ports:
       - '52:52'
